[package]
name = "initialize"
description = "Allows you to initialize different data strutures using traits"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["unsafe"]

unsafe = [] # Enables default implementations that use unsafe

[dependencies]
